[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/icons/crystal.png" type="Texture" id=1]
[ext_resource path="res://sprites/icons/gem.png" type="Texture" id=2]
[ext_resource path="res://sprites/icons/ara.png" type="Texture" id=3]
[ext_resource path="res://fonts/crash-a-like.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/icons/relic.png" type="Texture" id=5]
[ext_resource path="res://modules/warp_room/scripts/HUD_Warp.gd" type="Script" id=6]
[ext_resource path="res://addons/shaderV/saved/mat_distort.tres" type="Material" id=7]
[ext_resource path="res://addons/shaderV/saved/mat_doodle.tres" type="Material" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="VisualShader" id=3]
graph_offset = Vector2( 25, 122 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="Animation" id=5]
resource_name = "Hide"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("BossInfo:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 332.372, -0.25, 0, 0.25, 0, 305.121, -0.25, 0, 0.25, 0, 509.404, -0.25, 0, 0.25, 0, 495.751, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 1.1, 1.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LevelInfo:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 24.655, -0.25, 0, 0.17, -3.33333, 57.2998, -0.18, 3.33333, 0.25, -1.5253, -128, -0.25, 0, 0.25, 0, -153.205, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5, 0.9, 1.5, 1.7 )
}

[sub_resource type="Animation" id=6]
resource_name = "Show"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("BossInfo:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 480, -0.25, 0, 0.25, 0, 495.751, -0.25, 0, 0.25, 0, 315.447, -0.25, 0, 0.25, 0, 332.372, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.4, 0.6, 1.3, 1.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("LevelInfo:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -128, -0.25, 0, 0.25, 0, -153.205, -0.25, 0, 0.25, 0, 48.1295, -0.25, 0, 0.17, -3.33333, 24.6548, -0.08, 10.9747, 0.25, -1.5253 ),
"times": PoolRealArray( 0, 0.2, 0.8, 1 )
}

[node name="HUD_Warp" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossInfo" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -147.628
margin_right = 722.0
margin_bottom = -3.62723
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="BossInfo"]
material = ExtResource( 8 )
margin_top = 16.0
margin_right = 128.0
margin_bottom = 144.0
rect_min_size = Vector2( 128, 128 )
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="BossInfo"]
margin_left = 132.0
margin_top = 117.0
margin_right = 698.0
margin_bottom = 144.0
size_flags_horizontal = 7
size_flags_vertical = 8
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.529412, 0.0509804, 1 )
text = "boss name"
valign = 2

[node name="LevelInfo" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 32.0
margin_top = 24.655
margin_right = -65.0
margin_bottom = 119.655
custom_constants/separation = 28
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crystal" type="VBoxContainer" parent="LevelInfo"]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.552941 )
margin_right = 91.0
margin_bottom = 95.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="LevelInfo/Crystal"]
material = ExtResource( 7 )
margin_left = 13.0
margin_right = 77.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LevelInfo/Crystal"]
modulate = Color( 0.917647, 0.882353, 0.0352941, 1 )
margin_top = 68.0
margin_right = 91.0
margin_bottom = 95.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Crystal"
align = 1

[node name="WhiteGem" type="VBoxContainer" parent="LevelInfo"]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.552941 )
margin_left = 119.0
margin_right = 233.0
margin_bottom = 95.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="LevelInfo/WhiteGem"]
material = ExtResource( 7 )
margin_left = 25.0
margin_right = 89.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LevelInfo/WhiteGem"]
margin_top = 68.0
margin_right = 114.0
margin_bottom = 95.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.984314, 0.976471, 0.976471, 1 )
text = "White Gem"
align = 1

[node name="Level" type="VBoxContainer" parent="LevelInfo"]
margin_left = 261.0
margin_right = 389.0
margin_bottom = 95.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leve" type="Label" parent="LevelInfo/Level"]
material = SubResource( 4 )
margin_top = 15.0
margin_right = 128.0
margin_bottom = 79.0
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.584314, 0, 1 )
text = "Big name around "
align = 1
valign = 1
autowrap = true

[node name="SecondGem" type="VBoxContainer" parent="LevelInfo"]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.552941 )
margin_left = 417.0
margin_right = 531.0
margin_bottom = 95.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="LevelInfo/SecondGem"]
material = ExtResource( 7 )
margin_left = 25.0
margin_right = 89.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LevelInfo/SecondGem"]
margin_top = 68.0
margin_right = 114.0
margin_bottom = 95.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.603922, 0.603922, 0.603922, 1 )
text = "White Gem"
align = 1

[node name="Relic" type="VBoxContainer" parent="LevelInfo"]
modulate = Color( 0.243137, 0.243137, 0.243137, 0.552941 )
margin_left = 559.0
margin_right = 623.0
margin_bottom = 95.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="LevelInfo/Relic"]
modulate = Color( 0.835294, 0.835294, 0.835294, 1 )
material = ExtResource( 8 )
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="LevelInfo/Relic"]
margin_left = 3.0
margin_top = 68.0
margin_right = 61.0
margin_bottom = 95.0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.337255, 0.501961, 0.384314, 1 )
text = "Relic"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.05
playback_speed = 1.23
anims/Hide = SubResource( 5 )
anims/Show = SubResource( 6 )
